--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "bnmixkzg.github",
+  "name": "zzmibzzo.github",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.4.0",
-    "core-js": "2.6.4",
-    "zone.js": "0.8.29",
-    "@types/node": "8.9.5",
+    "@angular/animations": "^7.2.10",
+    "@angular/cdk": "7.3.5",
+    "@angular/common": "7.2.4",
+    "@angular/compiler": "7.2.4",
     "@angular/core": "7.2.4",
     "@angular/forms": "7.2.4",
-    "@types/jasmine": "2.8.16",
-    "@angular/common": "7.2.4",
-    "@angular/router": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@types/jasminewd2": "2.0.6",
+    "@angular/material": "^7.3.5",
     "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4"
+    "@angular/platform-browser-dynamic": "7.2.4",
+    "@angular/router": "7.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "@types/jasmine": "2.8.16",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "8.9.5",
+    "aws-sdk": "^2.425.0",
+    "core-js": "2.6.4",
+    "rxjs": "6.4.0",
+    "zone.js": "0.8.29"
   },
   "scripts": {
     "ng": "ng",
