--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy":"ng build --prod && aws s3 cp dist/demo s3://awskonsole/ --recursive "
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
