--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy":"ng build --prod && aws s3 cp dist/demo s3://awskonsole/ --recursive "
+    "deploy":"ng build --prod && aws s3 cp dist/demo s3://awskonsoletest/ --recursive "
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
